# Evo_PRISM

./: .dockerignore  .env.example  .env.windows.example  .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  PRESENTATION.md  PROGRESS.md  PartA_Outline.md  PartA_Report.md  PartB_ACM.tex  PartB_Report.md  README.md  README_zh.md  SESSION_RESUME.md  SETUP.md  Singularity.def  TECHNICAL_OVERVIEW.md  docker-compose.yml  entrypoint.sh  execution_trace.md  plan_zh.md  presentation.md  pyproject.toml  pyrightconfig.json  start_bioagent.ps1  start_bioagent.sh  start_hermes.sh  stop_bioagent.ps1  stop_bioagent.sh  stop_hermes.sh  ~$presentation_0517.pptx
.github/workflows/: ci.yml
MSseg/backend/: __init__.py  main.py
analysis/: artifact_registry.py  artifact_resources.py  bulk_deg.py  bulk_eda.py  bulk_heatmap.py  bulk_timeseries.py  code_promoter.py  embed.py  enrichment.py  failure_diagnosis.py  figure_cache.py  history_query.py  impact.py  l1_cache.py  mcseg_quality.py  mcseg_wrapper.py  multiomics_integration.py  path_utils.py  pathway_scoring.py  playbook.py  report_generator.py  report_reader.py  spatial_eda.py  spatial_metrics.py  tool_registry.py  tool_search.py  tool_visualizer.py  validators.py  viz_utils.py
analysis_msseg/data/: SuppTable1_crc_metrics_per_roi.csv  breast_benchmark_summary.csv  metrics_ac.csv  metrics_ac_combined.csv  metrics_ac_wba.csv
benchmark/: query_typology.json  run_benchmark.py  run_cross_domain_transfer.py
benchmark/nextflow/: main.nf  nextflow.config
benchmark/snakemake/: Snakefile  config.yaml  config_bench.yaml
config/: db_utils.py  settings.py
docs/: DATA_INTEGRATION_GUIDE.md  DB114_MODULE_11_12_REVIEW.md  GITNEXUS_BORROW_ASSESSMENT.md  L3_DATA_INGEST_GUIDE.md  STAR_SCHEMA.md  TEST_DATABASE_INDEX.md  academic_potential_analysis.md  architecture_audit_report.md  launchd_backup.plist.example  launchd_cleanup_figure_cache.plist.example  launchd_helix_expire.plist.example  launchd_multimodal_server.plist.example  launchd_rebuild_hnsw.plist.example  launchd_scan_samples.plist.example  paper_draft.md  supplementary.md
docs/guides/: L3_DATA_INGEST_GUIDE.md  MCP_HTTP_GUIDE.md  MCP_JSON_SETUP.md  PREFILTER_VERIFICATION.md  SCHEDULED_TASKS.md  STAR_SCHEMA.md  TESTING.md  TEST_DATABASE_INDEX.md  WINDOWS_SETUP.md
docs/launchd/: launchd_backup.plist.example  launchd_cleanup_dynamic_code.plist.example  launchd_cleanup_l1.plist.example  launchd_embedding_server.plist.example  launchd_weekly_restore_test.plist.example
docs/logs/: PROGRESS.md  execution_trace.md
docs/paper/: paper_draft.md  supplementary.md
docs/plans/: IMPLEMENTATION_PLAN.md  evaluation_and_testing_plan_a.md  plan.md  plan_summary.md  plan_zh.md  presentation.md  progress_a.md  task.md
gene_sets/: hair_follicle.yaml
i:\Evo_PRISM/logs/: wal_preflight_status.json
msseg_docs/: README.md  README_zh.md
playbooks/: bulk_rnaseq.md  mcseg.md  spatial_visium.md
proteome_data/sHG_timeseries/: merged_gene_pathway_expression_0130.csv  sHG_log2intensity_0804.csv
references/: agent_first_data_systems.md  agent_first_notes.md  anndata_scanpy.md  bertscore.md  copy_is_all_you_need_iclr2023.md  deepseek_ocr.md  duckdb.md  duckdb_vss.md  lakeharbor_icde2024.md  llmlingua.md  mcp_protocol.md  memgpt.md  pdf_to_md.py  rrf_hybrid_search_summary.md  tracer_provenance.md
scheduler/: backup_db.py  cleanup_dynamic_code.py  cleanup_figure_cache.py  cleanup_l1_cache.py  helix_expire_snapshots.py  rebuild_hnsw.py  scan_new_samples.py  weekly_restore_test.py
scratch/: run_joint_pipeline.py
scripts/: 00_init_db.py  01_register_sample.py  02_convert_ndpi_to_tiff.py  02_spatial_to_parquet.py  03_init_l1_cache.py  03_migrate_schema_v2.py  04_migrate_l1_rrf.py  04_migrate_schema_v3.py  05_migrate_schema_v4.py  06_migrate_schema_v5.py  07_migrate_schema_v6.py  08_migrate_schema_v7.py  09_migrate_schema_v8.py  10_migrate_schema_v9.py  11_migrate_schema_v10.py  12_migrate_schema_v11.py  13_migrate_schema_v12.py  14_migrate_schema_v13.py  15_migrate_schema_v14.py  16_migrate_schema_v15.py  17_migrate_schema_v16.py  18_migrate_schema_v17.py  19_migrate_schema_v18.py  20_migrate_schema_v19.py  21_migrate_schema_v20_drop_tools_fk.py  22_migrate_schema_v21_mcp_metrics.py  23_migrate_schema_v22_confidence_check.py  24_migrate_schema_v23_blob_limit.py  25_migrate_schema_v24_failure_diagnosis.py  generate_architecture_plot.py  generate_architecture_plots_academic.py  generate_benchmark_plots.py  generate_diversified_queries.py  patch_aa1_tool_registration.py  recompute_paper_stats.py  start_webserver.sh  verify_prefilter_pushdown.py
scripts/bulk_rna/: export_deseq2_counts.py  kallisto_to_matrix.py  map_ensembl_to_symbol.py  merge_kallisto_to_ensembl_matrix.py  merge_kallisto_to_gene_matrix.py
scripts/msseg/: build_full_adata.py  export_mcseg.py  qc_metrics.py  roi_sampler.py  run_analysis.py  seg_quality.py  (+2 more)
server/: agent.py  agent_bulk.py  agent_history.py  agent_spatial.py  bio_memory_server.py  code_executor.py  dashboard.py  dashboard_actions.py  fast_path.py  graduation.py  telegram_bot.py  web_app.py
tests/: _visualizer_stubs.py  benchmark_ablation_no_llm.py  benchmark_ca1c_live.py  benchmark_cache_rrf.py  benchmark_flywheel_r10.py  benchmark_helix_n5.py  benchmark_helix_promotion.py  benchmark_impact.py  benchmark_visium_hd_ingestion.py  conftest.py  test_artifact_registry.py  test_artifact_resources.py  test_artifact_unique_constraint.py  test_backfill_tool_id.py  test_bulk_deg.py  test_bulk_eda.py  test_bulk_heatmap.py  test_bulk_timeseries.py  test_code_executor.py  test_cte_scalability.py  test_dashboard.py  test_dashboard_actions.py  test_enrichment.py  test_fast_path.py  test_figure_cache.py  test_google_backend_multi_round.py  test_graduation.py  test_handle_message_fast_path.py  test_helix_formulas.py  test_helix_revert_guard.py  test_impact.py  test_init_db.py  test_l1_rrf.py  test_mcseg_quality.py  test_pathway_scoring.py  test_phase10.py  test_phase2b.py  test_phase3.py  test_phase4.py  test_phase5.py  (+11 more)
tools/: registry.json
(+204 files in other folders)
