[project]
name = "bioagent"
version = "0.1.0"
description = "BioAgent：AI Agent 驅動的實驗室生資智慧分析平台"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # === 核心資料庫 ===
    "duckdb>=1.1.0",
    "pyarrow>=14.0.0",
    # === 生資分析 ===
    "anndata>=0.10.0",
    "scanpy>=1.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # === 視覺化 ===
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    # === MCP Server ===
    "mcp>=1.0.0",
    # === Telegram Bot（Phase 0）===
    "python-telegram-bot>=21.0",
    # === 環境設定 ===
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "requests>=2.34.2",
    "anthropic>=0.102.0",
    "pytest-asyncio>=1.3.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "mistune>=3.2.1",
    "radon>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
]

embedding-google = [
    "google-genai>=0.3.0",
]

embedding-openai = [
    "openai>=1.0.0",
]

embedding-local = [
    "sentence-transformers>=3.0.0",
]

# === Agent 大腦 ===
anthropic = [
    "anthropic>=0.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# ExFAT 磁碟不支援 symlink，venv 建在 SSD 並 symlink 過來
# 執行前先設定：
#   export UV_PROJECT_ENVIRONMENT=/Volumes/SSD/envs/bioagent
# 或手動建立 symlink：
#   uv venv /Volumes/SSD/envs/bioagent
#   ln -s /Volumes/SSD/envs/bioagent .venv

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
