[project]
name = "bioagent"
version = "0.1.0"
description = "BioAgent：AI Agent 驅動的實驗室生資智慧分析平台"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # === 核心資料庫 ===
    "duckdb>=1.1.0",
    "pyarrow>=14.0.0",
    # === 生資分析 ===
    "anndata>=0.10.0",
    "scanpy>=1.10.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    # === 視覺化 ===
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    # === MCP Server ===
    "mcp>=1.0.0",
    # === Telegram Bot（Phase 0）===
    "python-telegram-bot>=21.0",
    # === 環境設定 ===
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "requests>=2.34.2",
    "anthropic>=0.102.0",
    "pytest-asyncio>=1.3.0",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "mistune>=3.2.1",
    "radon>=6.0.1",
    "omicverse",
    "gseapy",
    "adjusttext",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
]

embedding-google = [
    "google-genai>=0.3.0",
]

embedding-openai = [
    "openai>=1.0.0",
]

embedding-local = [
    "sentence-transformers>=3.0.0",
]

# === Agent 大腦 ===
anthropic = [
    "anthropic>=0.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# ExFAT 磁碟不支援 symlink，venv 建在 SSD 並 symlink 過來
# 執行前先設定：
#   export UV_PROJECT_ENVIRONMENT=/Volumes/SSD/envs/bioagent
# 或手動建立 symlink：
#   uv venv /Volumes/SSD/envs/bioagent
#   ln -s /Volumes/SSD/envs/bioagent .venv

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

# ── Coverage 基線（2026-05-20：整體 55%）──────────────────────────────────────
# 不在預設 pytest 跑（會拖慢套件）；量基線時顯式加旗標：
#   pytest --cov=analysis --cov=server --cov=config --cov=scheduler --cov-report=term-missing
# 已知盲區（待補測試）：server/agent.py 33%、bulk_eda/pathway_scoring/multiomics 等 0%
[tool.coverage.run]
source = ["analysis", "server", "config", "scheduler"]
omit = ["*/__pycache__/*", "*/candidates/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
]

# ── Ruff（lint + format）─────────────────────────────────────────────────────
# 保守起步：只用預設規則集（E4/E7/E9/F：致命錯誤 + 明顯 bug），不開風格嚴選，
# 避免 25k 行首次掃描被淹沒。日後可漸進加開。
[tool.ruff]
target-version = "py310"
line-length = 100
# 參考用 / 第三方 / 執行期產物：不納入 lint（results/ 已由 .gitignore 排除）
extend-exclude = [
    "analysis_msseg", "backend_msseg", "msseg_docs",
    "data_ana", "results_ana", "crc_visium_data",
]

[tool.ruff.lint.per-file-ignores]
"config/__init__.py" = ["F403"]            # 刻意 re-export settings（from .settings import *）
"server/web_app.py" = ["E402"]             # sys.path 注入 + load_dotenv 後才 import
"analysis/artifact_registry.py" = ["E402"] # 同上：先載 vss 擴充再 import
"tests/*" = ["E402"]                        # 測試常在中段重組 import（mock 邊界）
